--- a/slides/presentation.html
+++ b/slides/presentation.html
@@ -19,7 +19,7 @@
     .reveal table { font-size: 0.8em; }
     .highlight { color: #e74c3c; font-weight: bold; }
     .success { color: #27ae60; }
-    .timer { position: fixed; bottom: 20px; right: 20px; font-size: 1.5em; background: rgba(0,0,0,0.85); color: white; padding: 15px 25px; border-radius: 10px; font-weight: bold; box-shadow: 0 4px 12px rgba(0,0,0,0.3); }
+    .timer { position: fixed; bottom: 20px; left: 20px; font-size: 1.5em; background: rgba(0,0,0,0.85); color: white; padding: 15px 25px; border-radius: 10px; font-weight: bold; box-shadow: 0 4px 12px rgba(0,0,0,0.3); }
     .progress-bar { position: fixed; top: 0; left: 0; width: 100%; height: 8px; background: rgba(0,0,0,0.2); z-index: 1000; }
     .progress-fill { height: 100%; background: linear-gradient(90deg, #27ae60 0%, #f39c12 60%, #e74c3c 100%); transition: width 0.3s ease; }
     .hakata-message { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: rgba(230, 126, 34, 0.95); color: white; padding: 30px 50px; border-radius: 15px; font-size: 1.8em; font-weight: bold; box-shadow: 0 8px 24px rgba(0,0,0,0.4); z-index: 2000; display: none; animation: popIn 0.3s ease; }
